storage names players

--- a/menu.html
+++ b/menu.html
@@ -38,11 +38,12 @@
         </div>
 
         <div>
-          <a id="start" class="button center" href="/index.html"
+          <a id="start" class="button center" href="/game.html"
             >Comece o jogo</a
           >
         </div>
       </div>
     </main>
+    <script type="module" src="/scripts/menu/user.js"></script>
   </body>
 </html>
