--- a/menu.html
+++ b/menu.html
@@ -44,6 +44,6 @@
         </div>
       </div>
     </main>
-    <script type="module" src="/scripts/menu/user.js"></script>
+    <script type="module" src="/scripts/menu/storageUsers.js"></script>
   </body>
 </html>
