create index for js archives

--- a/game.html
+++ b/game.html
@@ -27,7 +27,7 @@
         <input type="button"></input>
       </div>
       <div class="center">
-        <a class="button" href="menu.html">Voltar ao Menu</a>
+        <a class="button" href="/index.html">Voltar ao Menu</a>
       </div>
     </main> 
     <section id="ganhador" class="display-none">
