--- a/pages/game.html
+++ b/pages/game.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jogo da Velha</title>
-  <link rel="stylesheet" href="styles/game.css" />
-  <link rel="stylesheet" href="styles/global.css" />
+  <link rel="stylesheet" href="/styles/game.css" />
+  <link rel="stylesheet" href="/styles/global.css" />
 </head>
 <body>
   <div class="wrapper">
@@ -27,7 +27,7 @@
         <input type="button"></input>
       </div>
       <div class="center">
-        <a class="button" href="index.html">Voltar ao Menu</a>
+        <a class="button" href="../index.html">Voltar ao Menu</a>
       </div>
     </main> 
     <section id="ganhador" class="display-none">
@@ -37,6 +37,6 @@
       </div>
     </section>
   </div>
-  <script type="module" src="scripts/main.js"></script>
+  <script type="module" src="/scripts/main.js"></script>
 </body> 
 </html>
