--- a/pages/game.html
+++ b/pages/game.html
@@ -27,7 +27,7 @@
         <input type="button"></input>
       </div>
       <div class="center">
-        <a class="button" href="../index.html">Voltar ao Menu</a>
+        <a class="button" href="/jogo-da-velha">Voltar ao Menu</a>
       </div>
     </main> 
     <section id="ganhador" class="display-none">
@@ -37,6 +37,6 @@
       </div>
     </section>
   </div>
-  <script type="module" src="/scripts/main.js"></script>
+  <script type="module" src="../scripts/main.js"></script>
 </body> 
 </html>
