--- a/pages/game.html
+++ b/pages/game.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jogo da Velha</title>
-  <link rel="stylesheet" href="/styles/game.css" />
-  <link rel="stylesheet" href="/styles/global.css" />
+  <link rel="stylesheet" href="../styles/game.css" />
+  <link rel="stylesheet" href="../styles/global.css" />
 </head>
 <body>
   <div class="wrapper">
