--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div>
-          <a id="start" class="button center" href="pages/game.html"
+          <a id="start" class="button center" href="game.html"
             >Comece o jogo</a
           >
         </div>
