fix show result, draw result and labelPlayer

--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
     <main>
       <header>
         <h1>Jogo da Velha</h1>
-        <h3>É a vez do Jogador: <span id="jogador"></span></h3>
+        <h3>É a vez do(a) Jogador(a): <span id="jogador"></span></h3>
       </header>
       <div class="interface">
         <input type="button" class="bottom right"></input>
