new functionality - Score

--- a/game.html
+++ b/game.html
@@ -12,6 +12,19 @@
   <div class="wrapper">
     <main>
       <header>
+        
+        <h2>Placar</h2>
+        <div class="inline">
+          <span id="namePlayerOne"></span>
+          <span>:</span>
+          <span id="scorePlayerOne"></span>
+        </div>
+        <div class="inline">
+          <span id="namePlayerTwo"></span>
+          <span>:</span>
+          <span id="scorePlayerTwo"></span>
+        </div>
+        
         <h1>Jogo da Velha</h1>
         <h3>É a vez do(a) Jogador(a): <span id="jogador"></span></h3>
       </header>
