--- a/game.html
+++ b/game.html
@@ -12,19 +12,25 @@
   <div class="wrapper">
     <main>
       <header>
-        
-        <h2>Placar</h2>
-        <div class="inline">
-          <span id="namePlayerOne"></span>
-          <span>:</span>
-          <span id="scorePlayerOne"></span>
+        <div id="score" class="center">
+          <div class="center">
+            <h2>Placar</h2>
+          </div>
+          <div class="inline">
+            <div class="center">
+              <span id="namePlayerOne"></span>
+              <span id="scorePlayerOne"></span>
+            </div>
+            <div class="verticalLine">
+              <span class="verticalLine"></span>
+            </div>
+            <div class="center">
+              <span id="namePlayerTwo"></span>
+              <span id="scorePlayerTwo"></span>
+            </div>
+          </div>
         </div>
-        <div class="inline">
-          <span id="namePlayerTwo"></span>
-          <span>:</span>
-          <span id="scorePlayerTwo"></span>
-        </div>
-        
+  
         <h1>Jogo da Velha</h1>
         <h3>É a vez do(a) Jogador(a): <span id="jogador"></span></h3>
       </header>
@@ -43,10 +49,10 @@
         <a class="button" href="/jogo-da-velha/">Voltar ao Menu</a>
       </div>
     </main> 
-    <section id="ganhador" class="display-none">
-      <div class="center">
+    <section id="ganhador" class="ganhador">
+      <div id="css-transition-win" class="">
         <h2><span id="winner"></span></h2>
-        <button class="button" id="btn-playAgain">Jogar mais uma</button>
+        <button class="button center" id="btn-playAgain">Jogar mais uma</button>
       </div>
     </section>
   </div>
