add personalized form options

--- a/index.html
+++ b/index.html
@@ -37,13 +37,40 @@
           </section>
         </div>
 
+        <section id="form">
+          <header>
+            <h2>Se quiser, personalize uma forma aqui 👇</h2>
+          </header>
+          <div class="inline">
+            <section class="center">
+              <div>
+                <h3>1ª Jogador</h3>
+                <input maxlength="2" type="text" id="formPlayerOne" />
+              </div>
+            </section>
+            <section class="center">
+              <div>
+                <h3>2ª Jogador</h3>
+                <input maxlength="2" type="text" id="formPlayerTwo" />
+              </div>
+            </section>
+          </div>
+          <div class="center">
+            <p>
+              <i>
+                você pode escolher emojis também 😮, a forma é o ícone que
+                corresponderá ao clássico 'X' e 'O'
+              </i>
+            </p>
+          </div>
+        </section>
+
         <div>
-          <a id="start" class="button center" href="game.html"
-            >Comece o jogo</a
-          >
+          <a id="start" class="button center" href="game.html">Comece o jogo</a>
         </div>
       </div>
     </main>
     <script type="module" src="scripts/menu/storageUsers.js"></script>
+    <script type="module" src="scripts/menu/storageFormUsers.js"></script>
   </body>
 </html>
