adjust styles center

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <header>
             <h2>Se quiser, personalize uma forma aqui 👇</h2>
           </header>
-          <div class="inline">
+          <div class="center inline">
             <section class="center">
               <div>
                 <h3>1ª Jogador</h3>
